--- a/Library Officials.html
+++ b/Library Officials.html
@@ -1,18 +1,48 @@
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://getbootstrap.com/docs/5.3/assets/css/docs.css" rel="stylesheet">
-    <title>card prototype</title>
+    <title>Library Officials</title>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
   </head>
   <body class="p-3 m-0 border-0 bd-example m-0 border-0">
+
+    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+      
+      <a class="navbar-brand" href="#"></a>
+      <img src="Logo1.jpg" alt="cpc library" width="70" height="70">
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+              <li class="nav-item active">
+                  <a class="nav-link active" href="index.html">Home</a>
+              </li>
+              <li class="nav-item">
+                  <a class="nav-link active" href="Books.html">Books</a>
+              </li>
+              <li class="nav-item">
+                  <a class="nav-link active" href="About.html">About</a>
+              </li>
+              <li class="nav-item">
+                  <a class="nav-link active" href="Library Officials.html">Library Officials</a>
+              </li>
+                  <ul class="navbar-nav ml-auto">
+                    <li class="nav-item"> 
+                        <a class="nav-link" data-toggle="modal" data-target="#loginModal" href="#">Login</a>
+                        </li>
+                  </ul>
+      </div>
+  </nav>
     
     <div class="row my-5 align-items-center justify-content-center">
      <div class="col-8 col-lg-3 col-x1-3">
       <div class="card border-primary border-1">
-       <img src="Image/Nora Rose.jpg" class="card-img-top" alt="..." wei>
+       <img src="Image/Nora Rose.jpg" class="card-img-top" alt="...">
         <div class="card-body text-center py-4">
          <h5 class="card-title">NORA P. ROSE, RL, MSLS</h5>
          <p class="card-text mx-5 text-muted d-none d-lg-block">Chief Librarian</p>
@@ -24,7 +54,7 @@
     <div class="row my-5 aligh-items-center justify-content-center">
      <div class="col-8 col-lg-3 col-x1-3">
       <div class="card border-primary border-1">
-       <img src="Image/" class="card-img-top" alt="...">
+       <img src="Image/blank.webp" class="card-img-top" alt="...">
         <div class="card-body">
          <h5 class="card-title">CYRIL JAMES O. VILLAFRANCA, RL</h5>
          <p class="card-text mx-5 text-muted d-none d-lg-block">Boulevard Campus Librarian</p>
@@ -77,7 +107,7 @@
 
     <div class="col-8 col-lg-3 col-x1-3">
         <div class="card border-primary border-1">
-      <img src="" class="card-img-top" alt="...">
+      <img src="image/blank.webp" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title">ROSANNA G. BILLONES, MBA, MFA</h5>
         <p class="card-text mx-5 text-muted d-none d-lg-block">Law Library In-charge 
